--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ linkedin_username:
 google_plus_username:
 
 # Build settings
-markdown: redcarpet
-highlighter: pygments
+markdown: kramdown
+highlighter: rogue
