--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Luis E. Aguilar
+title: Luis E. Aguilar | Web Developer
 email: luis.e.aguilar@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
