--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: ""
+baseurl: "http://20tibbygt06.github.io"
 
 twitter_username: 20tibbygt06
 github_username:  20tibbygt06
@@ -15,4 +15,4 @@ google_plus_username:
 
 # Build settings
 markdown: kramdown
-highlighter: rogue
+highlighter: pygments
