--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,6 @@ google_plus_username:
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rogue
 paginate: 5
 paginate_path: "blog/page:num/"
