--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: "http://luiseaguilar.com"
 twitter_username: 20tibbygt06
 github_username:  20tibbygt06
 facebook_username: 20tibbygt06
-linkedin_username: in/luiseaguilar
+linkedin_username: luiseaguilar
 google_plus_username:
 
 # Build settings
